hphp/test/slow/ext_vsdebug/exception_bp.php.expectf
hello world.
About to throw again.

Fatal error: Uncaught exception 'UnexpectedValueException' with message 'Exn thrown!' in %s/exception_bp.php.test:13
Stack trace:
#0 {main}
